fix visibility problem

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ body {
 
 /* MENU */
 .nav {
+    visibility: hidden;
     width: 0vw;
     height: 0vh;
     font-size: 0px;
@@ -112,6 +113,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 .show {
+    visibility: visible;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
